# hidden_markov_states_project

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
markovstates/: .cache.sqlite  cli.py  data_collect.py  factor_analysis.py  models.py  preprocessing.py  scrap.py  utils.py
markovstates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: hmm_final.pkl  scaler.pkl
notebooks/: .cache.sqlite  data_explore.ipynb  factor_explore.ipynb  models_explore.ipynb  viz.ipynb
src/: data_collect.py  factor_analysis.py  preprocessing.py
testing/: test_data_collect.py  test_models.py  test_preprocessing.py
